--- a/BulkyBookWeb/Views/Category/Index.cshtml
+++ b/BulkyBookWeb/Views/Category/Index.cshtml
@@ -22,6 +22,8 @@
             <tr>
                 <th>Category Name</th>
                 <th>Display Order</th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -30,9 +32,18 @@
                 <tr>
                     <td width="50%">@obj.Name</td>
                     <td width="30%">@obj.DisplayOrder</td>
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i>
+                            </a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash-fill"></i>
+                            </a>
+                        </div>
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
-
 </div>
