--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Delete.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Category
+﻿@model CoverType
 @{
     ViewData["Title"] = "Delete";
 }
@@ -8,7 +8,7 @@
     <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Delete Category</h2>
+            <h2 class="text-primary">Delete Cover Type</h2>
             <hr />
         </div>
         @*<div asp-validation-summary="All"></div>*@
@@ -16,12 +16,8 @@
             <label asp-for="Name"></label>
             <input asp-for="Name" disabled class="form-control" />
         </div>
-        <div class="mb-3">
-            <label asp-for="DisplayOrder"></label>
-            <input asp-for="DisplayOrder" disabled class="form-control" />
-        </div>
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="CoverType" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
