--- a/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/CoverType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Category>
+﻿@model IEnumerable<CoverType>
 @{
     ViewData["Title"] = "Index";
 }
@@ -7,11 +7,11 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
+            <h2 class="text-primary">Cover Type List</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-plus-circle"></i> Create New Category
+            <a asp-controller="CoverType" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i> Create New Cover Type
             </a>
         </div>
     </div>
@@ -20,8 +20,7 @@
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th>Category Name</th>
-                <th>Display Order</th>
+                <th>Cover Type Name</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -31,13 +30,12 @@
             {
                 <tr>
                     <td width="50%">@obj.Name</td>
-                    <td width="30%">@obj.DisplayOrder</td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a asp-controller="CoverType" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a asp-controller="CoverType" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i>
                             </a>
                         </div>
