--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -51,7 +51,13 @@
             <input asp-for="Price100" class="form-control" />
             <span asp-validation-for="Price100" class="text-danger"></span>
         </div>
-
+        <div class="mb-3">
+            <label asp-for="CategoryId"></label>
+            <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select">
+                <option disabled selected>--Select Category--</option>
+            </select>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
         <button type="submit" class="btn btn-primary" style="width:150px">Save</button>
         <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
