--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -53,7 +53,7 @@
         </div>
         <div class="mb-3 col-12">
             <label asp-for="Product.ImageUrl"></label>
-            <input type="file" id="uploadBox" class="form-control" />
+            <input type="file" id="uploadBox" name="file" class="form-control" />
         </div>
         <div class="mb-3 col-6">
             <label asp-for="Product.CategoryId"></label>
