--- a/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
     <br/><br/>
 
-    <table class="table table-bordered table-striped" style="width:100%">
+    <table id="tblData" class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
                 <th>Title</th>
@@ -28,3 +28,7 @@
         </thead>
     </table>
 </div>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
