--- a/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Product/Upsert.cshtml
@@ -38,7 +38,7 @@
                 </div>
                 <div class="mb-3 col-6">
                     <label asp-for="Product.ListPrice"></label>
-                    <input asp-for="Product.ListPrice" class="form-control" />
+                    <input asp-for="Product.ListPrice" type="decimal" class="form-control" />
                     <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
                 </div>
                 <div class="mb-3 col-6">
