Add to ShoppingCart

--- a/BulkyBook.Web/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyBook.Web/Areas/Customer/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                                 <p>As low as: <b>@product.Price100.ToString("c")</b></p>
                             </div>
                         </div>
-                        <a asp-action="Details" class="btn btn-primary form-control" asp-route-id="@product.Id">Details</a>
+                        <a asp-action="Details" class="btn btn-primary form-control" asp-route-productId="@product.Id">Details</a>
                     </div>
                 </div>
             </div>
