--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                     <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
                   </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index"><i class="bi bi-cart"></i></a>      
+                </li>
               </ul>
               <partial name="_LoginPartial" />
 @*              <form class="d-flex">
