wip - adding strip

--- a/BulkyBook.Web/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BulkyBook.Web/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,4 +1,6 @@
 ﻿@model ShoppingCartViewModel
+@using Microsoft.Extensions.Options
+@inject IOptions<BulkyBook.Utility.StripeSettings> Sripe
 
 <form method="post">
 	<br />
