--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                   </div>
                 </li>
                 <li class="nav-item dropdown">
+                    <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Orders</a>      
+                </li>
+                <li class="nav-item dropdown">
                     <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index"><i class="bi bi-cart"></i></a>      
                 </li>
               </ul>
