--- a/BulkyBook.Web/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Order/Details.cshtml
@@ -2,6 +2,7 @@
 @using BulkyBook.Utility
 
 <form method="post">
+	<input asp-for="OrderHeader.Id" hidden />
 	<br />
 	<div class="container">
 		<div class="card">
@@ -177,7 +178,7 @@
 								{
 									<div class="col-3">Payment Date</div>
 									<div class="col-9">
-										<input value="@Model.OrderHeader.PaymentDate.ToShortDateString()" readonly class="form-control" />
+										<input value="@Model.OrderHeader.PaymentDate.ToShortDateString()" id="paymentDate" readonly class="form-control" />
 									</div>
 								}
 							</div>
@@ -187,7 +188,7 @@
 									<input asp-for="OrderHeader.PaymentStatus" readonly class="form-control" />
 								</div>
 							</div>
-							<input type="submit" class="btn btn-warning form-control my-1" value="Update Order Details" />
+							<input type="submit" asp-action="UpdateOrderDetail" class="btn btn-warning form-control my-1" value="Update Order Details" />
 
 
 						</div>
@@ -195,39 +196,59 @@
 							<h4 class="d-flex justify-content-between align-items-center mb-3">
 								<span class="text-primary">Order Summary</span>
 							</h4>
-							<label class="btn btn-outline-primary form-control my-2">Order Status - OrderStatus</label>
+							<label class="btn btn-outline-primary form-control my-2">Order Status - @Model.OrderHeader.OrderStatus</label>
 
 							<ul class="list-group mb-3">
+								@foreach(var item in Model.OrderDetail)
+								{
 								<li class="list-group-item d-flex justify-content-between p-2">
 									<div class="row container">
 										<div class="col-8">
 
-											<h6 class="my-0 text-primary">Product.Title</h6>
-											<small class="text-muted">Price : Price</small><br />
-											<small class="text-muted">Quantity : Count</small>
+											<h6 class="my-0 text-primary">@item.Product.Title</h6>
+											<small class="text-muted">Price : @item.Price.ToString("c")</small><br />
+											<small class="text-muted">Quantity : @item.Count</small>
 										</div>
-										<div class="col-4">
-											<p class="text-success">count * price</p>
+										<div class="col-4 text-end">
+											<p class="text-success">@((@item.Count * @item.Price).ToString("c"))</p>
 										</div>
 									</div>
 								</li>
+								}
 
 								<li class="list-group-item bg-info">
 									<div class="row container">
 										<div class="col-6">
 											<h5 class="text-white">TOTAL </h5>
 										</div>
-										<div class="col-6 text-right">
-											<h5 class="text-white">$$$</h5>
+										<div class="col-6 text-end">
+											<h5 class="text-white">@Model.OrderHeader.OrderTotal.ToString("c")</h5>
 										</div>
 									</div>
 								</li>
 							</ul>
 
-							<input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
-							<input type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
-							<input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
-							<input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
+							@if(User.IsInRole(SD.ROLE_ADMIN) || User.IsInRole(SD.ROLE_EMPLOYEE))
+							{
+								@if(Model.OrderHeader.OrderStatus == SD.StatusApproved)
+								{
+									<input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
+								}
+								@if(Model.OrderHeader.OrderStatus == SD.StatusInProcess)
+								{
+									<input type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
+								}
+								@if(Model.OrderHeader.OrderStatus == SD.PaymentStatusDelayedPayement &&
+									Model.OrderHeader.OrderStatus == SD.StatusShipped)
+								{
+									<input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
+								}
+								@if(Model.OrderHeader.OrderStatus != SD.StatusRefunded ||
+									Model.OrderHeader.OrderStatus != SD.StatusCancelled)
+								{
+									<input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
+								}
+							}
 						</div>
 					</div>
 				</div>
