--- a/BulkyBook.Web/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Order/Details.cshtml
@@ -232,21 +232,22 @@
 							{
 								@if(Model.OrderHeader.OrderStatus == SD.StatusApproved)
 								{
-									<input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
+									<input type="submit" asp-action="StartProcessing" class="btn btn-primary form-control my-1" value="Start Processing" />
 								}
 								@if(Model.OrderHeader.OrderStatus == SD.StatusInProcess)
 								{
-									<input type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
+									<input type="submit" asp-action="ShipOrder" onclick="return ValidateInput()"
+									class="btn btn-primary form-control my-1" value="Ship Order" />
 								}
 								@if(Model.OrderHeader.OrderStatus == SD.PaymentStatusDelayedPayement &&
 									Model.OrderHeader.OrderStatus == SD.StatusShipped)
 								{
-									<input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
+									<input type="submit" asp-action="" class="btn btn-success form-control my-1" value="Pay Now" />
 								}
-								@if(Model.OrderHeader.OrderStatus != SD.StatusRefunded ||
+								@if(Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
 									Model.OrderHeader.OrderStatus != SD.StatusCancelled)
 								{
-									<input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
+									<input type="submit" asp-action="CancelOrder" class="btn btn-danger form-control my-1" value="Cancel Order" />
 								}
 							}
 						</div>
@@ -257,3 +258,29 @@
 	</div>
 </form>
 
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+    <script>
+        function ValidateInput(){
+            if(document.getElementById("trackingNumber").value==""){
+                Swal.fire({
+                  icon: 'error',
+                  title: 'Oops...',
+                  text: 'Please enter the Tracking Number',
+                });
+                return false;
+            };
+            if(document.getElementById("carrier").value==""){
+                Swal.fire({
+                  icon: 'error',
+                  title: 'Oops...',
+                  text: 'Please enter the Carrier Number',
+                });
+                return false;
+            };
+            return true;
+        }
+    </script>
+}
