--- a/BulkyBook.Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/BulkyBook.Web/Areas/Admin/Views/Order/Index.cshtml
@@ -34,7 +34,7 @@
 <div class="p-3">
     <div class="d-flex justify-content-between pt-4">
         <div class="p-2">
-            <h2 class="text-primary">Product List</h2>
+            <h2 class="text-primary">Order List</h2>
         </div>
         <div class="p-2">
             <ul class="list-group list-group-horizontal-sm">
