--- a/BulkyBook.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BulkyBook.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,11 +1,17 @@
 ﻿@page
+@using BulkyBook.Utility
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
-
-<h1 class="pt-4">@ViewData["Title"]</h1>
-
+@if(User.IsInRole(SD.ROLE_ADMIN))
+{
+    <h1 class="pt-4">Register - ADMIN PORTAL</h1>
+}
+else
+{
+    <h1 class="pt-4">@ViewData["Title"]</h1>
+}
 <div class="row">
     <div class="col-md-7 pt-4">
         <form id="registerForm" class="row" asp-route-returnUrl="@Model.ReturnUrl" method="post">
@@ -57,6 +63,8 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            @if(User.IsInRole(SD.ROLE_ADMIN))
+            {
             <div class="form-floating py-2 col-6">
                 <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
                     <option disabled selected>-Select Role-</option>
@@ -66,10 +74,13 @@
                 <select asp-for="Input.CompanyId" style="display:none" asp-items="@Model.Input.CompanyList" class="form-select">
                     <option disabled selected>-Select Company-</option>
                 </select>
-            </div>
+            </div>  
+            }
             <button id="registerSubmit" type="submit" class="w-100 btn btn-primary">Register</button>
         </form>
     </div>
+    @if(!User.IsInRole(SD.ROLE_ADMIN))
+    {
     <div class="col-md-5">
         <section>
             <h3>Use another service to register.</h3>
@@ -100,6 +111,7 @@
             }
         </section>
     </div>
+    }
 </div>
 
 @section Scripts {
