--- a/BulkyBook.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBook.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BulkyBookWeb</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Bulky</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="true" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
